--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ version = "${project.version}+${libs.versions.minecraft.get()}"
 group = project.maven_group
 
 repositories {
-	maven { url = "https://maven.fabricmc.ne" }
+	maven { url = "https://maven.fabricmc.net" }
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
